feat: implement enterprise-grade security enhancements
- bcrypt password hashing with migration script
- environment-based configuration (.env support)
- parameterized queries for SQL injection prevention
- secure session management with timeout
- comprehensive input validation and sanitization
- account lockout protection against brute force

--- a/installation/requirements.txt
+++ b/installation/requirements.txt
@@ -1,16 +1,8 @@
-PIL
-time
+Pillow
 numpy
-ctypes
-tkinter
-datetime
 tabulate
-functools
-webbrowser
 matplotlib
 customtkinter
-mysql.connector
-matplotlib.pyplot
-matplotlib.gridspec
-matplotlib.widgets
-mpl_toolkits.mplot3d
+mysql-connector-python
+bcrypt>=4.0.1
+python-dotenv>=1.0.0
